base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-app
  template:
    metadata:
      labels:
        app: guestbook-app
    spec:
      containers:
        - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
          name: guestbook-app
          ports:
            - containerPort: 81
