base/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook-app
